--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -151,20 +151,22 @@
                         <div class="EmptyBox20"></div>
                     </p:panel>
                 </p:panel>
-<p:panel id="unusedID" style="border: 0px; background: transparent">
-                <div class="Container100 CustomWidthFA2 MarTop5">
-                    <p:selectBooleanCheckbox  styleClass="RegulatoryCheckBox" value="#{tdcto.tdMasterData.ownerBD}"
-                                             itemLabel="I, my spouse or an immediate member of my family is a licensed, employed by or associated with a broker-dealer firm, a financial services regulator, securities exchange, or a member of a securities exchange.">
-                    </p:selectBooleanCheckbox>
-                </div>
+                <p:panel id="unusedID" style="border: 0px; background: transparent">
+                    <div class="Container100 CustomWidthFA2 MarTop5">
+                        <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox" value="#{tdcto.tdMasterData.ownerBD}"
+                                                 itemLabel="I, my spouse or an immediate member of my family is a licensed, employed by or associated with a broker-dealer firm, a financial services regulator, securities exchange, or a member of a securities exchange.">
+                        </p:selectBooleanCheckbox>
+                    </div>
                 </p:panel>
             </div>
             <div class="Container100 MarTop20" style="margin: 10px 10px;">
                 <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                               actionListener="#{tdcto.prevPage}"/>
+                               actionListener="#{tdcto.prevPage}"
+                               update="@form"/>
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                               actionListener="#{tdcto.nextPage}"/>
+                               actionListener="#{tdcto.nextPage}"
+                               update="@form"/>
             </div>
         </p:tab>
         <p:tab title="Joint Holder" disabled="true" rendered="false">
